[fix] hideous extra scrollbars and extra width for city widget container scrollbar

--- a/src/components/city-widget-container/city-widget-container.styles.scss
+++ b/src/components/city-widget-container/city-widget-container.styles.scss
@@ -11,7 +11,7 @@
     gap: 2rem;
     flex-wrap: wrap;
     height: 20rem;
-    width: calc(100vw - 8rem);
+    width: calc(100vw - 5rem);
     overflow-y: scroll;
     transition: all 2s;
   }
