--- a/src/components/details-table/details-table.styles.scss
+++ b/src/components/details-table/details-table.styles.scss
@@ -1,5 +1,4 @@
 .details-table {
-  overflow-y: scroll;
   height: calc(100vh - 64px - 6.5rem - 0.3rem - 3.8rem - 5rem - 38rem);
   flex-grow: 1;
   @media only screen and (max-width: 425px) {
@@ -7,7 +6,6 @@
   }
   table {
     height: calc(100vh - 64px - 6.5rem - 0.3rem - 3.8rem - 5rem - 38rem);
-    overflow-y: scroll;
   }
   tr {
     border-bottom: 1.5px solid #808080;
@@ -15,6 +13,5 @@
   th,td{
     color: #fff;
     font-size: 1.2rem;
-    overflow: scroll;
   }
 }
